--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,12 @@ android {
             debuggable true
         }
     }
+    sourceSets { main { java.srcDirs = ['src/main/java'] } }
 }
 
 dependencies {
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.0'
 }
