--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
-
     defaultConfig {
-        applicationId "com.example.darkphoton.sungka_project"
+        applicationId 'com.example.deathgull.sungka_project'
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -20,9 +19,11 @@ android {
             debuggable true
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.1.0'
 }
