--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.darkphoton.sungka_project" >
+    package="com.example.deathgull.sungka_project" >
     <application
         android:allowBackup="true"
         android:icon="@drawable/shellup"
@@ -8,7 +8,7 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.deathgull.sungka_project.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar.Fullscreen" >
@@ -19,7 +19,7 @@
         </activity>
 
         <activity
-            android:name=".GameActivity"
+            android:name="com.example.deathgull.sungka_project.GameActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar.Fullscreen" >
