--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,13 @@ android {
     }
     sourceSets { main { java.srcDirs = ['src/main/java'] } }
 }
-
+//repositories { jcenter() }
 dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.hamcrest:hamcrest-library:1.3'
+    testCompile 'org.mockito:mockito-all:1.10.19'
     androidTestCompile 'junit:junit:4.12'
     androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
-//    androidTestCompile 'org.mockito:mockito-core:1.10.19'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.0'
 }
