--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,16 +7,9 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
 
-        <!--TODO Disabled because it isn't used at the moment and it is causing exception on start [Dovydas]-->
-        <!--<activity-->
-            <!--android:name="com.example.deathgull.sungka_project.MainActivity"-->
-            <!--android:label="@string/app_name"-->
-            <!--android:screenOrientation="landscape"-->
-            <!--android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar.Fullscreen" >-->
-        <!--</activity>-->
-
+        //<!--TODO Disabled because it isn't used at the moment and it is causing exception on start [Dovydas]-->
         <activity
-            android:name="com.example.deathgull.sungka_project.GameActivity"
+            android:name="com.example.deathgull.sungka_project.MenuActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar.Fullscreen" >
@@ -24,6 +17,14 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.example.deathgull.sungka_project.GameActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar.Fullscreen" >
+
         </activity>
     </application>
 
