--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,8 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
 
-        //<!--TODO Disabled because it isn't used at the moment and it is causing exception on start [Dovydas]-->
         <activity
-            android:name="com.example.deathgull.sungka_project.MenuActivity"
+            android:name=".MenuActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar.Fullscreen" >
@@ -25,13 +24,15 @@
         </activity>
 
         <activity
-            android:name="com.example.deathgull.sungka_project.GameActivity"
+            android:name=".GameActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar.Fullscreen" >
-
         </activity>
-        <activity android:name=".StatisticsActivity" >
+
+        <activity android:name=".StatisticsActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
         </activity>
     </application>
 
