--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
         }
     }
     sourceSets { main { java.srcDirs = ['src/main/java'] } }
+    testOptions { unitTests.returnDefaultValues = true }
 }
 //repositories { jcenter() }
 dependencies {
